# django-auth0-user

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
ci/: appveyor-download.py
docs/: conf.py  installation.rst  usage.rst
docs/reference/: django_auth0_auth.rst  index.rst
src/django_auth0_auth/: __init__.py  apps.py  backend.py  models.py  permission_checks.py
src/django_auth0_auth/migrations/: 0001_initial.py
src/django_auth0_user/: __init__.py  admin.py  apps.py  auth0_api.py  backend.py  clean.py  drf_authentication.py  models.py  permission_checks.py  settings.py  validators.py
src/django_auth0_user/migrations/: 0001_initial.py
src/django_auth0_user/pipeline/: user.py
src/django_auth0_user/rest_framework/: authentication.py
src/django_auth0_user/templatetags/: auth0.py
src/django_auth0_user/util/: auth0_api.py
test_app/: api_urls.py  models.py  serialisers.py  urls.py  views.py
test_app/migrations/: 0001_initial.py
test_app/templates/test_app/: example.html
test_sample_apps/javascript/02-Calling-an-API/: index.html  package-lock.json  package.json
tests/: conftest.py  fixtures.py  settings.py  test_django_auth0_auth.py  test_models.py  test_python_social_auth_backend.py  test_views.py  urls.py  xpaths.py
tests/basic/: test_django_redirect.py
tests/drf/: test_drf.py
tests/fixtures/: auth0.py
tests/integration_tests/: test_views.py
tests/utils/: auth0.py  django.py  fixtures.py
(+6 files in other folders)
